tooling/nargo_cli/tests/snapshots/execution_failure/div_signed/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: Unsafe block must have a safety comment above it
  ┌─ src/main.nr:3:13
  │
3 │     let b = unsafe {
  │             ------ The comment must start with the "Safety: " word
  │

error: Attempt to divide with overflow
   ┌─ src/main.nr:11:6
   │
11 │     (a / -1)
   │      ------
   │

Error interpreting main function
